# cartouche

./: Cargo.toml  README.gmi  rustfmt.toml
crates/gemini/: Cargo.toml
crates/gemini/examples/: example_com.rs
crates/gemini/src/: config.rs  fingerprints.rs  lib.rs  request.rs  response.rs  status.rs  tcp.rs  tls.rs  verify.rs  x509.rs
src/: macros.rs  main.rs  main_menu.rs  main_window.rs  try_catch.rs
src/cacao/: layout_constraint.rs  mod.rs  scroll_view.rs  text.rs  text_container.rs  text_field.rs  text_view.rs  view.rs
